before change introduction messing up contrast cases

--- a/intention motor representation joint action (paper 3)/conf budapest philosophy 2012-11/tmp.tex
+++ b/intention motor representation joint action (paper 3)/conf budapest philosophy 2012-11/tmp.tex
@@ -18,8 +18,7 @@
 
 %\setromanfont[Mapping=tex-text]{Sabon LT Std} 
 
-
-\begin{document}	
+\begin{document}
 
 \setlength\footnotesep{1em}
 
@@ -37,20 +36,6 @@ In this paper we argue that there are forms of shared agency characterising whic
 Shared agency is not only a matter of what we intend: sometimes it  constitutively involves interlocking structures of motor representation.  This may have consequences for some metaphysical, normative and phenomenological questions about shared agency.
 
 \end{abstract}
-
-
-
-\section{***Discussion with Cordula Vesper}
-\begin{enumerate}
-\item Say more about what shared agency at the start: use the contrast cases instead of examples, and say that it involves some kind of fusing of agency.
-\item Note that in the jumping experiments, only the subject with the shorter jump changes what she does depending on the difference in jump-length between the two subjects.  Vesper et al interpret this as showing that the subject with the shorter jump plans the whole activity.  But it isn't obviously reciprocal: there is no evidence that the subject with the longer jump is similarly planning.  And this makes sense: here they achieve coordination by first distributing roles (a strategy) and then having at least one subject plan both actions (so there is slightly less reliance on the two plans coinciding).  
-Of course the appearance that they are distributing roles might just be an artefact of reciprocal planning where the upshot of the planning is that the person with the longer jump just does what she would normally do.
-
-\item {[done]}  Don't say `neither shared nor an intention' unless you explain this.
-\item {[done]} Can cite \citet{konvalinka:2010_follow} as example of what happens when two people each try to predict the other.
-\end{enumerate}
-
-
 
 \section{***Discussion with Hong Yu}
 `Once we move beyond the single agent there's no a priori reason to suppose that you have a single kind of agentive structure' (Hong Yu).
@@ -148,7 +133,9 @@ Such actions comprise a \emph{shared intentional activity} (\citealp[p.\ 142]{Br
 %On this widely held view, the difference between our walking together and two strangers merely walking side-by-side is that one event is appropriately related to a shared intention whereas the other is not.
 
 Explaining shared agency in terms of shared intention pushes us back to the question, What is shared intention?
-Here is much disagreement.
+The term `shared intention' is potentially misleading.
+On many accounts, shared intentions are neither shared nor intentions.
+And there is much divergence on what shared intention is.
 Some hold that it differs from
 ordinary intention with respect to the attitude involved (\citealp{Searle:1990em}). 
 Others have explored the notion that it differs from ordinary intention with respect to its subject, which is plural \citep{Gilbert:1992rs,helm_plural_2008}, 
@@ -196,7 +183,7 @@ Related claims are made by
 	\citet{Tollefsen:2005vh}.
 }
 
-Why might anyone hold, contrary to what we shall argue, that a full account of shared agency can be given without appeal to ingredients other than shared intention? 
+Why might anyone hold, contrary to what we shall argue, that a full account of shared intention without appeal to ingredients other than shared intention? 
 Two considerations might initially appear favour this view.
 
 First, if someone thought that it is possible to distinguish systematically between the contrast cases by appeal to shared intention (and perhaps only by appeal to shared intention), this could motivate holding that further ingredients are unnecessary in explicating shared agency.
@@ -207,47 +194,56 @@ We shall argue, however, that distinguishing systematically between the contrast
 If a full account of individual agency could be given by appeal to intention and other propositional attitudes with no appeal to motor representation,
 then it would seem unlikely that giving a full account of shared agency must somehow involve appeal to motor representation.
 However, as mentioned above, some have argued that fully characterising individual agency requires appeal to motor representation as well as intention \citep{pacherie:2000_content,butterfill:2012_intention}. 
-If these arguments are correct, the parallel between individual and shared agency motivates considering the possibility that  there is a constitutive role for motor representation in shared agency. 
+Given these arguments, the parallel between individual and shared agency motivates considering the possibility that  there is a constitutive role for motor representation in shared agency. 
 We also note that some philosophers allow that there could be agents whose actions are purposive---and, in some cases, even intentional---although  the agents have no intentions at all.
 For instance, Bratman describes a creature who `acts on the basis of its beliefs and considered desires' only (not intentions) as doing things `intentionally' (\citeyear[p.\ 251]{bratman:2000_valuing}; see \citealp[pp.\ 137--8]{Bratman:1987xw} for further justification). 
 So there are several grounds for doubting that a full account of ordinary, individual agency could be given just in terms of intention. 
 If, as we believe, these doubts are well founded, then it is reasonable to ask whether ingredients other than shared intention are need to give a full account of shared agency.
-Our answer involves several steps. 
-The first is to describe the structure of motor representation of interest. 
 
 
+\section{Motor representation}
+Since we aim to argue that a full account of shared agency must appeal to motor representation, it may be helpful first to provide some background about motor representation.
 
-\section{Shared motor representation}
-Our argument starts with an empirical premise about enabling conditions for shared agency: there are reciprocal, agent-neutral motor representations of outcomes whose obtaining would normally involve action on the part of each agent;
-moreover, these structures of motor representation sometimes facilitate coordination when agents exercise shared agency.
-This needs unpacking. 
-So before considering evidence for this premise (in the next section), let us first explain  it.
+A \textit{motor} representation is the sort of representation that enables us to reach for, grasp and transfer objects in a coordinated and fluid way.  
+%Imagine someone who, while remaining seated, moves an object from her right to her left, passing it between her hands as she does so. 
+%The transition between hands is not something she needs to think or reason about. 
+%But if the transition occurs without any pause---if she does not have to wait before releasing the object from her right hand into her left in order to check that the object is securely in her left hand---this is a sign that her action involves predicting the position of her left hand.
+%***continue this example?
+We follow several psychologists and philosophers in supposing that motor representations feature in planning and monitoring action \citep[e.g.][]{wolpert:1995internal, miall:1996_forward}.
+[*HY asks why focus here on forward models]
 
-A \textit{motor} representation is the sort of representation that enables agents to reach for, grasp and transfer objects in a coordinated and fluid way. 
-Motor representations play a key role in monitoring and planning actions  \citep[e.g.][]{wolpert:1995internal, miall:1996_forward,Wilson:2005qu}.
-Unlike intentions and related mental states, motor representations are usually involved in planning actions over milliseconds rather than minutes or even years.
+Motor representations are in some ways similar to intentions,
+as some have recently argued (\citealp[pp.\ 189-90]{pacherie:2008_action}; \citealp{butterfill:2012_intention}).
+First, like intentions, some motor representations represent outcomes and not merely kinematic features of action.
+Like intentions, some motor representations play a role in coordinating multiple  component activities by virtue of their role as elements in hierarchically structured plans.
+And, like intentions, some motor representations coordinate these activities in a way that would normally facilitate the outcome’s occurrence.
 
-Some motor representations resemble intentions  in 
-	representing outcomes (rather than merely kinematic or dynamic features of action), 
-	coordinating multiple  component activities by virtue of their role as elements in hierarchically structured plans,
-	and coordinating these activities in a way that would normally facilitate the represented outcome's occurrence (\citealp{hamilton_action_2008}; \citealp[pp.\ 189-90]{pacherie:2008_action}; \citealp{butterfill:2012_intention}).
-Despite these points of similarity, 
-motor representations can be distinguished from intentions and other action-related intentions,
-	 as well as from perceptual representations,
-	 by their representational format \citep{butterfill:2012_intention}. 
-
-Motor representations lead a kind of double life.
-For motor representations are involved not only in producing actions but also in observing actions. 
-Indeed there are some striking similarities between the sorts of processes and representations usually involved in performing a particular action and those which typically occur when observing someone else perform that action.
-In some cases it is almost as if the observer were planning the observed action, only to stop just short of performing it herself.%
+One major dissimilarity between intentions and motor representations is that motor representations lead a kind of double life.
+For motor representations are involved not only in producing actions but also in observing actions. Indeed there seem to be some striking similarities between the sorts of processes and representations usually involved in performing a particular action and those which typically occur when observing someone else perform that action \citep{rizzolatti_functional_2010,rizzolatti_mirrors_2008}.%
 \footnote{ 
-For reviews, see \citet{jeannerod_motor_2006,rizzolatti_mirrors_2008,rizzolatti_functional_2010}.
 If motor representations occur in action observation, then observing actions might sometimes facilitate performing compatible actions and interfere with performing incompatible actions.  Both effects do indeed occur, as several studies have shown \citep{brass:2000_compatibility, craighero:2002_hand, kilner:2003_interference, costantini:2012_does}. 
 }
-When motor representations of outcomes trigger a planning-like process in action observation, this may allow the observer to predict others' actions \citep{Flanagan:2003lm,ambrosini:2011_grasping,ambrosini:2012_tie,Costantini:2012fk}.
+
+
+[*HY: I'm still thinking about how best to introduce motor representation: any pointers?]
+
+
+So much for the bare notion of motor representation.
+Why suppose that motor representation might be needed in giving an account of shared agency? 
+Our answer involves several steps. 
+We first describe a structure of motor representation,
+and then present evidence that such structures sometimes occur when two or more agents coordinate their actions. 
+This will allow us to conclude only 
 
 
 
+\section{Social motor representation}
+We start from an empirical premise about enabling conditions for shared agency: some joint actions are facilitated by reciprocal, agent-neutral motor representations of outcomes whose obtaining would normally involve action on the part of each agent.
+
+This needs unpacking. 
+As already mentioned, a \textit{motor} representation is the sort of representation that enables us to reach for, grasp and transfer objects in a coordinated and fluid way.
+To repeat, motor representations are not concerned with merely kinematic or dynamic features of actions only.
+Rather, some motor representations represent outcomes, such as the movement of a target object from one place to another.
 
 A representation (motor or not) is \emph{agent-neutral} if its content does not specify any particular agent or agents.%
 \footnote{
@@ -267,21 +263,19 @@ In principle such representations could have contents which specify particular a
 However, we focus on agent-neutral representations to show that our view is consistent with the possibility that reciprocal motor representations are agent-neutral. 
 }
 
-Two or more agents have \emph{reciprocal} representations (motor or not) just if there is a single outcome and each agent has a motor representation of that outcome. 
-Reciprocal representations can occur both when one agent observes another acting alone and also when two or more agents act together.
-Where one agent observes another acting alone,
+Two or more agents have \emph{reciprocal} motor representations  just if there is a single outcome and each agent has a motor representation of that outcome. 
+Reciprocal motor representations can occur both when one agent observes another acting alone and also when two or more agents act together.
+Where on agent observes another acting alone,
 it is possible that both have motor representations of an outcome to which the agent's action is directed.
-For the agent, this representation plays a role in planning and monitoring; for the observer, this representation may facilitate prediction and recognition.
-This is one case of reciprocal motor representation---or, as it is more usually called, mirroring.
+For the agent, the representation plays a role in planning and monitoring; for the observer, the representation facilitates recognition.
+This case of reciprocal motor representation---often called mirroring---has been extensively studied.
 But our main interest is in a different case,
 one where two or more agents are acting together,
  there is a single outcome to which their actions are directed,
  and the agents each have a motor representation of this outcome.
-In this case of reciprocal motor representation, the agents each represent an outcome whose obtaining would normally involve not only their own actions but also those of other agents.%
-\footnote{ 
-	Note that our having reciprocal motor representations would not by itself imply that we know that the represented outcome's obtaining would normally involve actions other than our own.
-}
-So when we act together, some of my motor representations may concern outcomes that are partly but not entirely to be realised by my actions; and likewise for you.
+So in this case of reciprocal motor representation, the agents each represent an outcome whose obtaining would normally involve not only their own actions but also those of other agents.
+(Note that our having reciprocal motor representations does not imply that we know this.)
+When we act together, some of my motor representations may concern outcomes that are partly but not entirely to be realised by my actions; and likewise for you.
 To illustrate, suppose our task is to move an object from A to B, where you pick it up and pass it to me so that I can then place it.
 In this case I may represent the movement of the object from A to B and not only the component movements.
 I represent a collective outcome of our actions and not just outcomes to which each of our actions are individually directed.
@@ -293,9 +287,8 @@ Note that shared motor representations are shared only in the sense in which two
 (We do not mean to suggest that they are shared in the sense in which two people can share a parent: there need be no representation with two or more subjects.)
 Note also that a shared motor representation is not a special kind of motor representation: it is merely a structure of ordinary motor representations. 
 At this stage we are not strictly entitled use the term `shared motor representation' as an abbreviation.
-After all, we have yet to show that these structures of motor representation play a constitutive role in explaining shared agency, or even an enabling role; 
-we have yet to review evidence that they exist.
-So the choice of term merely reflects our aim. 
+After all we have yet to show that these structures of motor representation play any constitutive role (or even any enabling role) in explaining shared agency.
+The choice of term merely reflects our aim. 
 
 
 
@@ -355,14 +348,14 @@ How could social motor representation play a role in coordinating action when tw
 
 As a first step towards answering  this question let us illustrate a general principle about planning by scaling up from motor action all the way to corporate action.
 
-In small, socialist city, Aravinda organises the trams and Gerhard the busses.
-Let us stipulate that the extent to which the two services, tram and bus, are coordinated is to be measured by the sum of all passengers' total journey times.
-So new timetables would result in better coordination than the current timetables just if they would decrease the sum of passengers' total journey times.
-To illustrate, improving coordination might involve having trams arrive at a stop shortly before, rather than shortly after, busses depart from there.
-Now Aravinda and Gerhard each intend they, Aravinda and Gerhard, coordinate the trams with the busses  to the greatest extent possible given other constraints; and they intend to do this by way of these intentions and meshing subplans of them, and this is common knowledge between them. 
+Suppose that Aravinda runs the trains and Gerhard  the busses.
+Let us stipulate that we measure the extent to which the two services, train and bus, are coordinated is to be measured by the sum of all passengers' total journey times.
+So new timetables would result in better coordination than the current timetables just if the new timetables would decrease the sum of passengers' total journey times.
+To illustrate, improving coordination might involve having trains arrive at a station shortly before, rather than shortly after, busses depart from there.
+Now Aravinda and Gerhard each intend they, Aravinda and Gerhard, coordinate the trains with the busses  to the greatest extent possible given other constraints; and they intend to do this by way of these intentions and meshing subplans of them, and this is common knowledge between them. 
 Aravinda and Gerhard thus meet Bratman's sufficient conditions for them to have a shared intention.
 Acting on this intention, 
-every January Aravinda updates the tram timetables and sends Gerhard the changes.
+every January Aravinda updates the train timetables and sends Gerhard the changes.
 Likewise, Gerhard  updates the bus timetables every June and sends Aravinda the changes.
 In this way  each is responsive to the other's intentions and subplans of these. 
 Indeed, each may even try to predict changes in the other's subplans and modify their own accordingly.  
@@ -370,18 +363,14 @@ But from each individual's point of view, the other's plans are  merely a constr
 
 This approach to planning suffers from two defects.
 First, it is unlikely to be optimal in the sense of resulting, eventually, in a combination of plans such that no other combination of plans would have been better for at least one service and no worse for either service.
-Second, it is unlikely to be efficient in the sense of allowing Gerhard and Aravinda to arrive at an optimal combination of plans for the two services, trams and buses, with the fewest iterations.%
-\footnote{
-The limits of this type of coordination, where each agent tries to predict the actions of the other, is nicely shown by the `two-way interaction' of an experiment by \citet{konvalinka:2010_follow}.
-When subjects were required to synchronise the timing of finger taps with each other, they ended up with a pattern of errors `oscillating in opposite directions'.
-}
+Second, it is unlikely to be efficient in the sense of allowing Gerhard and Aravinda to arrive at an optimal combination of plans for the two services, trains and buses, with the fewest iterations.
 
 How could they do better?
-One possibility may be to have a single person planning the busses and trams---perhaps, for example, Aravinda could buy Gerhard's franchise. 
+One possibility may be to have a single person planning the busses and trains---perhaps, for example, Aravinda could buy Gerhard's franchise. 
 But suppose that this is not possible, and that there are limits on how much information Aravinda and Gerhard can share. 
 Then another way that might improve things would be to have Aravinda and Gerhard each plan everything.
-So Aravinda would plan the best timetable for all the trams and busses, and Gerhard would do the same.
-Since Aravinda only controls the trams, she can only implement the tram-related part of this master timetable.
+So Aravinda would plan the best timetable for all the trains and busses, and Gerhard would do the same.
+Since Aravinda only controls the trains, she can only implement the train-related part of this master timetable.
 Likewise, Gerhard can only implement the bus part of his master timetable.
 But if Aravinda's and Gerhard's separate planning processes are sufficiently similar, this process may result in coordinated services.
 In this new case, 
@@ -444,7 +433,7 @@ The planning is the same almost up to the actual muscle contractions.
 How could this be helpful?
 Suppose the agents' planning processes are similar enough that, for a given context and problem, they will produce approximately the same plans.
 Then having each agent plan the whole joint action means that (i) each agent plans the other agent's action,
-(ii) each agent's plan for the other agent's action is approximately the same as that agent's plan for her own action [***AMBIGUOUS: `that agent's plan' must refer to the other agent, not `each agent',
+(ii) each agent's plan for the other agent's action is approximately the same as that agent's plan for her own action,
 and 
 (iii) each  agent's plans for their own action are constrained by the plans for the other agent's action.
 
